--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,12 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block body %}
 
 <div class="jumbotron text-center">
-    <h1>Hello Tweeter's! </h1>
-    <h2>Built my website using Raspberry Pi3B+, Flask, Python3, Bootstrap, and SQLite </h2>
-    
+    <h1>Hello Developers! </h1>
+    <p class="lead">Built my website using Raspberry Pi3B+, Flask, Python3, Bootstrap, and SQLite </p>
+    <a href="/register" class="btn btn-primary btn-lg">Register</a>
+    <a href="/login" class="btn btn-success btn-lg">Login</a>
         
     
     <img src="http://www.naturalprogramming.com/images/smilingpython.gif">
