--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>Tim Conroy Flask</title>
+        
         <meta charset="utf-8">
+        <title>Tims Flask</title>
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1"
                 <!-- Bootstrap CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
-        
- 
     </head>
- <body>
+    <body>
 
-   {% include 'includes/_navbar.html' %}
-     <div class="container">
-       {% block body %} {% endblock %}
-    </div>
+        {% include 'includes/_navbar.html' %}
+         <div class="container">
+            {% include 'includes/_messages.html' %}
+            {% block body %} {% endblock %}
+        </div>
  
-  <!-- Bootstrap JS -->
-  <script  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" >
-        
-
-
- 
- </body>
+          <!-- Bootstrap JS -->
+        <script  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" >
+        <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
+        <script type="text/javascript">
+          CKEDITOR.replace('editor')
+        </script>  
+    </body>
 </html>
