Code correction: All working!

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
     <a href="/register" class="btn btn-primary btn-lg">Register</a>
     <a href="/login" class="btn btn-success btn-lg">Login</a>
         
-    
-    <img src="http://www.naturalprogramming.com/images/smilingpython.gif">
+
+</div>
 </div>
 
 {% endblock %}
