--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-  <h1>Dashboard <small> Welcome {{session.username}}</small></h1>
+<br>
+<br>
+  <h1>Dashboard <small> Welcome user: "{{session.username}}!"</small></h1>
   <a class="btn btn-success" href="/add_article"> Add Article</a>
   <hr>
   <table class="table table-striped">
