--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,14 +1,17 @@
-<nav class="navbar navbar-default">
-      <div class="container">
+<nav class="navbar navbar-inverse ">
+      <div class="container-fluid">
           <div class="navbar-header">
+          <a class="navbar-brand" href="#">TimsFlaskApp</a>
+          </div>
            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
              <span class="sr-only">Toggle navigation</span>
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">TimsFlaskApp</a>
-         </div>
+          
+          
+        
 
          <div id="navbar" class="collapse navbar-collapse">
            <ul class="nav navbar-nav">
@@ -22,8 +25,8 @@
                <li><a href="/dashboard">Dashboard</a></li>
                <li><a href="/logout">Logout</a></li>
              {% else %}
-               <li><a href="/register">Register</a></li>
-               <li><a href="/login">Login</a></li>
+               <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+               <li><a href="/login"><span class="glyphicon glyphicon-log-in"> Login</a></li>
              {% endif %}
           </ul>
         </div><!--collapse-->
