--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
         <meta charset="utf-8">
-        <title>Tims Flask</title>
+        <title>Tim's Flask Project</title>
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1"
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        
                 <!-- Bootstrap CDN -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+         <!--   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" > -->
+        
     </head>
     <body>
 
@@ -17,8 +20,14 @@
             {% block body %} {% endblock %}
         </div>
  
-          <!-- Bootstrap JS -->
-        <script  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" >
+          <!-- Latest compiled and minified  CSS -->
+         <script  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" > 
+        <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" >  -->
+
+        <!-- JQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        
         <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
         <script type="text/javascript">
           CKEDITOR.replace('editor')
